@@ -18,3 +18,4 @@ src/recentchannel.cpp
 src/recordStream.cpp
 src/sopcastchannel.cpp
 src/sopcastLivePlayer.cpp
+plugins/tvonline/tvonline.totem-plugin.in
