@@ -1,3 +1,12 @@
+2008-01-04  yetist  <yetist@gmail.com>
+
+	* plugins/tvonline/tvonline.py: 
+	* plugins/tvonline/Makefile.am: 
+	* plugins/tvonline/mms.lst: 
+	* configure.in: 
+	* po/POTFILES.in: 
+	the tvonline plugin for totem can work first.
+
 2008-01-03  yetist  <yetist@gmail.com>
 
 	* plugins: 
